--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="dist/styles.css">
     <title>Online Sell</title>
   </head>
   <body>
-    <h1>Esteban Lopez</h1>
-  </body>
-</html>
+    <div id="app"></div>
+    
+  
+
+<script src="dist/bundle.js" charset="utf-8"></script></body></html>
