--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <title>Online Sell</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <script src="/bundle.js" charset="utf-8"></script>
+    <script src="js/wow.min.js"></script>
   </body>
 </html>
