--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="styles.css">
-    <title>Online Sell</title>
+    <title>CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   </head>
